[gd_scene load_steps=6 format=3 uid="uid://bqwbj61y4b5i8"]

[ext_resource type="Script" path="res://level/mainmenu/MainMenu.gd" id="1_5b4bg"]
[ext_resource type="Texture2D" uid="uid://r4px6vp5s4yv" path="res://resource/images/main_menu_button/start.png" id="2_e1ipm"]
[ext_resource type="Texture2D" uid="uid://cj8gv8v3e7bhb" path="res://resource/images/main_menu_button/rule.png" id="3_ciqft"]
[ext_resource type="Texture2D" uid="uid://c5rjspw07mlp" path="res://resource/images/main_menu_button/exit.png" id="4_x1sk7"]

[sub_resource type="ButtonGroup" id="ButtonGroup_6exnw"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_5b4bg")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1537.0
offset_bottom = 864.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0784314, 0.0156863, 1)

[node name="ButtonContainer" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_left = 678.0
offset_top = 396.0
offset_right = 852.0
offset_bottom = 636.0
theme_override_constants/separation = 12
alignment = 1

[node name="StartButton" type="TextureButton" parent="Background/ButtonContainer"]
texture_filter = 1
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_6exnw")
texture_normal = ExtResource("2_e1ipm")

[node name="RuleButton" type="TextureButton" parent="Background/ButtonContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("3_ciqft")

[node name="ExitButton" type="TextureButton" parent="Background/ButtonContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("4_x1sk7")

[connection signal="pressed" from="Background/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Background/ButtonContainer/RuleButton" to="." method="_on_rule_button_pressed"]
[connection signal="pressed" from="Background/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
